Index styling is finished. Page is functional

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,8 +69,8 @@
                 <div class="col-md-6 order-1 order-md-2">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>MUSEUM OF CANDY</h2>
-                           
+                            <h2>Elegance</h2>
+                            <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
                     </div>
@@ -85,15 +85,15 @@
                 <div class="col-md-6">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>MUSEUM OF CANDY</h2>
-                            
+                            <h2>Simplicity</h2>
+                            <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
                     </div>
                     
                 </div>
                 <div class="col-md-6">
-                    <img class="img-fluid img-thumbnail" src="/images/milk.png">
+                    <img class="img-fluid img-thumbnail" src="/images/ice_cream4.jpg">
                 </div>
                     
             </div>
@@ -109,8 +109,8 @@
                 <div class="col-md-6 order-1 order-md-2">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>TICKETS</h2>
-                            <img class="d-none d-lg-inline" src="/images/lolli_icon.png" alt="#">
+                            <h2>EVENTS</h2>
+                            <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
                     </div>
