--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,8 +1,8 @@
 body {
-    background-color: #f55eac;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     font-family: "Nunito", sans-serif;
     font-weight: 100;
-    
 }
 
 #headerNav {
@@ -21,7 +21,7 @@ color: white;
 }
 
 #headerNav .nav-link:hover {
-    color: #ff4500;
+    color: #f498b8;
 }
 
 h1 span {
@@ -30,13 +30,15 @@ h1 span {
 }
 
 .img-thumbnail {
-    background-color: #7fffd4;
+    background-color: #f498b8;
+    border: none;
 }
 
 #headingGroup h1 {
     font-family: "Merriweather", sans-serif;
     font-size: 4em;
     font-weight: 100;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
 
 .navbar.scrolled {
@@ -79,3 +81,25 @@ h1 span {
     margin-top: 5%;
     
 }
+
+hr {
+    border: 0;
+    margin: 1.35em auto;
+    max-width: 100%;
+    background-position: 50%;
+    box-sizing: border-box;
+  }
+  .slash-1 {
+    height: 10px;
+    color: #f498b8;
+    background-image: linear-gradient(-45deg,
+      transparent,
+      transparent 25%,
+      currentColor 25%,
+      currentColor 50%,
+      transparent 50%,
+      transparent 75%,
+      currentColor 75%);
+    background-size: 10px 10px;
+    width: 250px;
+  }
