--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,42 +1,4 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-    crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
-    <title>Cup & Cone</title>
-  </head>
-  <body>
-    
-    <nav id="headerNav" class="navbar navbar-expand-md navbar-dark fixed-top py-0 scroll">
-        <a id="brand" class="navbar-brand scroll" href="#">CUP&CONE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">TICKETS</a>
-            </li>
-           </ul>
-        </div>
-      </nav>
+<%- include("partials/header") %>
 
     <section>
         <div class="container-fluid px-0">
@@ -69,7 +31,7 @@
                 <div class="col-md-6 order-1 order-md-2">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>Elegance</h2>
+                            <h2>ELEGANT</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
@@ -85,7 +47,7 @@
                 <div class="col-md-6">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>Simplicity</h2>
+                            <h2>CHARMING</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
@@ -109,7 +71,7 @@
                 <div class="col-md-6 order-1 order-md-2">
                     <div class="row justify-content-center">
                         <div class="blurb text-center col-10 col-lg-8 mt-5">
-                            <h2>EVENTS</h2>
+                            <h2>SIMPLISTIC</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
@@ -124,13 +86,6 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-    <script>
-        $(function () {
-            $(document).scroll(function () {
-                var $nav = $(".scroll");
-                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());               
-            });
-        });
-    </script>  
-</body>
-</html>
+<script src="/js/headerScroll.js"></script>
+
+<%- include("partials/footer") %>
