--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,20 +23,20 @@
   <body>
     
     <nav id="headerNav" class="navbar navbar-expand-md navbar-dark fixed-top py-0 scroll">
-        <a id="brand" class="navbar-brand scroll" href="#">CUP&CONE</a>
+        <a id="brand" class="navbar-brand scroll" href="/index">CUP&CONE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item ">
-              <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="/index/about">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TICKETS</a>
+              <a class="nav-link" href="/index/events">EVENTS</a>
             </li>
            </ul>
         </div>
