--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,12 +1,14 @@
 <%- include("partials/header") %>
 <section class="container-fluid sectionMargin">
-    <div class="row">
-        <article class="col-md-3">
-            <h1 class="display-5">Reserve Entry Today!</h1>
-            <p class="lead">Join us for our upcoming event inspired by the ocean front venue. A whimsical rendition of frozen treats.</p>
+    <div class="row align-items-center">
+        <article class="blurb col-md-3">
+            <h2>Reserve Entry Today!</h2>
+            <hr class="slash-1">
+            <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat adipisci beatae asperiores temporibus ad odio soluta nemo fuga dicta repellendus, omnis neque officiis tempore iure quod pariatur ratione voluptas sapiente.</p>
         </article>
         <div class="col-md-6">
-            <img src="/images/events1.svg" class="img-fluid" alt="Responsive image">
+            <img src="/images/events1.svg" class="img-fluid img-thumbnail" alt="Responsive image">
         </div>
         <article class="col-md-3">
             <form>
@@ -45,28 +47,31 @@
 
 <section class="container-fluid sectionMargin">
     <div class="row">
-        <article class="col-12 text-center">
-            <h1 display-2>Past Events -</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat?</p>
+        <article class="blurb col-12 text-center">
+            <h2 display-2>Past Events -</h2>
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat?</p>
         </article>
     </div>
     <div class="row my-0">
-        <article class="col">
-                <img class="img-fluid" src="/images/events2.svg" alt="Event Logo">
-                <h1 display-1>I am the first heading!</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
+        <article class="blurb col">
+                <img class="img-fluid img-thumbnail" src="/images/events2.svg" alt="Event Logo">
+                <h2>Gelato On The Brink</h2>
+                <p class="lead">Join us on the sandy cliffs of Coral Park for some artisan gelato and a view that is ever eroding!</p>
+                <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
         </article>
 
-        <article class="col">
-                <img class="img-fluid" src="/images/events3.svg" alt="Event Logo">
-                <h1 display-1>I am the secon heading!</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
+        <article class="blurb col">
+                <img class="img-fluid img-thumbnail" src="/images/events3.svg" alt="Event Logo">
+                <h2>The Melted Scoop</h2>
+                <p class="lead">Catch some rays and keep your beach bod with a guiltless scoop at Corona Del Mar!</p>
+                <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
         </article>
 
-        <article class="col">
-                <img class="img-fluid" src="/images/events4.svg" alt="Event Logo">
-                <h1 display-1>I am the third heading!</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
+        <article class="blurb col">
+                <img class="img-fluid img-thumbnail" src="/images/events4.svg" alt="Event Logo">
+                <h2>The Bar Between</h2>
+                <p class="lead">We're invading Isla Vista's notorious pub crawl with tasty treats for the on the go imbibing!</p>
+                <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
         </article>
 </div>
 </section>
