--- a/views/news.ejs
+++ b/views/news.ejs
@@ -4,5 +4,26 @@
     Welcome To the News Page, Where blog posts will be posted with catchy titles and placeholder text.
     explain how the news page is optional and how a cms can be used to post content.
 </h1>
-
+<section class="container-fluid sectionMargin">
+    <div class="row align-items-center">
+        <article class="blurb col-md-2">
+            <h2>Reserve Entry Today!</h2>
+            <hr class="slash-1">
+            <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat adipisci beatae asperiores temporibus ad odio soluta nemo fuga dicta repellendus, omnis neque officiis tempore iure quod pariatur ratione voluptas sapiente.</p>
+        </article>
+        <article class="blurb col-md-8">
+            <h2>Reserve Entry Today!</h2>
+            <hr class="slash-1">
+            <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat adipisci beatae asperiores temporibus ad odio soluta nemo fuga dicta repellendus, omnis neque officiis tempore iure quod pariatur ratione voluptas sapiente.</p>
+        </article>
+        <article class="blurb col-md-2">
+            <h2>Reserve Entry Today!</h2>
+            <hr class="slash-1">
+            <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat adipisci beatae asperiores temporibus ad odio soluta nemo fuga dicta repellendus, omnis neque officiis tempore iure quod pariatur ratione voluptas sapiente.</p>
+        </article>
+    </div>
+</section>
 <%- include("partials/footer") %>
