--- a/scss/index.scss
+++ b/scss/index.scss
@@ -22,7 +22,7 @@ body {
 }
 
 #headerNav .nav-link {
-color: white;
+color: #555;
 }
 
 #headerNav .nav-link:hover {
@@ -88,14 +88,26 @@ h1 span {
     margin-top: 5%;
 }
 
+.btn {
+    color: #fff;
+    background-color: $babyBlue;
+    text-shadow: 1px 0.5px #555;
+    border-color: #555;
+    letter-spacing: 0.04rem;
+    &:hover {
+        background-color: $yellow;
+        color: #fff;
+    }
+}
+
 hr {
     border: 0;
     margin: 1.35em auto;
     max-width: 100%;
     background-position: 50%;
     box-sizing: border-box;
-  }
-  .slash-1 {
+  
+  &.slash-1 {
     height: 10px;
     color: $yellow;
     background-image: linear-gradient(-45deg,
@@ -109,6 +121,7 @@ hr {
     background-size: 10px 10px;
     width: 250px;
   }
+}
 
 
 /* ===============
@@ -122,6 +135,7 @@ About Page CSS
 p.title {
     font-family: $text;
     font-weight: 400;
+    color: #555;
 }
 
 
@@ -131,6 +145,39 @@ p.title {
 
 #about-jumbo h1 {
     text-align: center;
+}
+
+
+/* ===============
+News Page CSS
+================ */
+
+.post {
+    background-color: #55555550;
+    border: 1.5px solid #555;
+    border-radius: 0.5rem;
+    margin: 2rem 0;
+    padding: 2rem;
+    & > img {
+        width: 600px;
+        height: auto;
+    }
+}
+
+.blurb.aside {
+    label, ul {
+        font-weight: 400;
+        color: #444;
+        padding: 0.5rem;
+        list-style: none;
+    }
+    li {
+        margin-bottom: 1rem;
+        text-align: left;
+        & > i {
+            padding-right: 0.25rem;
+        }
+    }
 }
 
 
@@ -148,3 +195,4 @@ Footer Page CSS
         width: 50%;
     }
 }
+
