--- a/views/events.ejs
+++ b/views/events.ejs
@@ -5,7 +5,6 @@
             <h2>Reserve Entry Today!</h2>
             <hr class="slash-1">
             <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
-            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat adipisci beatae asperiores temporibus ad odio soluta nemo fuga dicta repellendus, omnis neque officiis tempore iure quod pariatur ratione voluptas sapiente.</p>
         </article>
         <div class="col-md-6">
             <img src="/images/events1.svg" class="img-fluid img-thumbnail" alt="Responsive image">
@@ -39,7 +38,7 @@
                     <option>Jan-24th</option>
                   </select>
                 </div>
-                <button id="submit" class="btn btn-primary" type="submit" >Submit</button>
+                <button id="submit" class="btn" type="submit">Submit</button>
               </form>
         </article>
     </div>
@@ -75,15 +74,5 @@
         </article>
 </div>
 </section>
-
 <!-- <a href="https://www.vecteezy.com/free-vector/shop">Shop Vectors by Vecteezy</a> -->
 <%- include("partials/footer") %>
-
-<!-- <h1>
-    Welcome To the Events Page -
-    Have a large event photo across the top.
-    a small RSVP form,
-    then cards of upcoming events underneath that
-
-    Or a grid of cards and events. kinda fills the view in all directions like the webflow advert
-</h1> -->
