--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,9 +6,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta author="Lance Avitia" contact="MonocledDesign@gmail.com">
     
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- Font-Awsome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 
     <!-- App Stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
