--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <%- include("partials/header") %>
 
     <section>
-        <div class="container-fluid px-0">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
+        <div class="container-fluid p-0">
+            <div class="row align-items-center my-0 px-0 py-sm-0">
+                <div class="col-lg-6 px-0">
                     <div id="headingGroup" class="text-center text-white d-none d-lg-block mt-5">
                         <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
                         <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
@@ -15,7 +15,7 @@
                         <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
                     </div>
                 </div>
-                    <div class="col-lg-6"><img class="img-fluid img-thumbnail" src="/images/home1.png" alt="Yellow ice cream in a cone.">
+                    <div class="col-lg-6 px-0"><img class="img-fluid img-thumbnail" src="/images/home1.png" alt="Yellow ice cream in a cone.">
                     </div>
             </div>
         </div>
@@ -23,14 +23,14 @@
     
 
     <section class="sectionMargin">
-        <div class="container-fluid px-0">
-            <div class="row align-items-center content">
-                <div class="col-md-6 order-2 order-md-1">
+        <div class="container-fluid p-0">
+            <div class="row align-items-center content py-sm-0">
+                <div class="col-md-6 order-2 order-md-1 px-0">
                     <img class="img-fluid img-thumbnail" src="images/home2.png" alt="Ice cream sundae with chocolate powder on top">
                 </div>
-                <div class="col-md-6 order-1 order-md-2">
+                <div class="col-md-6 order-1 order-md-2 px-0">
                     <div class="row justify-content-center">
-                        <div class="blurb text-center col-10 col-lg-8 mt-5">
+                        <div class="blurb text-center col-10 col-lg-8 mt-5 px-0">
                             <h2>ELEGANT</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
@@ -42,18 +42,18 @@
     </section>
     
     <section class="sectionMargin">
-        <div class="container-fluid px-0">
-            <div class="row align-items-center">
-                <div class="col-md-6">
+        <div class="container-fluid p-0">
+            <div class="row align-items-center py-sm-0">
+                <div class="col-md-6 px-0">
                     <div class="row justify-content-center">
-                        <div class="blurb text-center col-10 col-lg-8 mt-5">
+                        <div class="blurb text-center col-10 col-lg-8 mt-5 px-0">
                             <h2>CHARMING</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
                         </div>
                     </div>                   
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 px-0">
                     <img class="img-fluid img-thumbnail" src="/images/home3.png" alt="Rainbow colored ice cream sundae.">
                 </div>                    
             </div>
@@ -61,14 +61,14 @@
     </section>
 
     <section class="sectionMargin mb-md-0">
-        <div class="container-fluid px-0">
-            <div class="row align-items-center content">
-                <div class="col-md-6 order-2 order-md-1">
+        <div class="container-fluid p-0">
+            <div class="row align-items-center content py-sm-0">
+                <div class="col-md-6 order-2 order-md-1 px-0">
                     <img class="img-fluid img-thumbnail" src="/images/home4.png" alt="Rainbow colored ice cream sundae." alt="Three scoops of yellow ice cream in a bowl.">
                 </div>
-                <div class="col-md-6 order-1 order-md-2">
+                <div class="col-md-6 order-1 order-md-2 px-0">
                     <div class="row justify-content-center">
-                        <div class="blurb text-center col-10 col-lg-8 mt-5">
+                        <div class="blurb text-center col-10 col-lg-8 mt-5 px-0">
                             <h2>SIMPLISTIC</h2>
                             <hr class="slash-1">
                             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
