--- a/views/news.ejs
+++ b/views/news.ejs
@@ -17,6 +17,12 @@
                 </article>
                 
                 <article class="blurb col-md-8 col-sm-12 px-0">
+                    <div class="post">
+                        <h2>Announcements!</h2>
+                        <hr class="slash-1">
+                        <p class="lead">A blog or news page is a great way to keep your customers up to date and engaged with your business.</p>
+                        <p class="lead"><a href="/news/admin">Create your own posts on the admin page!</a></p>
+                    </div>
                     <% for (item of postsArr) { %>
                     <div class="post">
                         <% if(item.data.image != false){ %>
