--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,32 @@
 <%- include("partials/header") %>
+<section class="container-fluid sectionMargin">
+    <div class="row align-items-center">
+        <article class="blurb col-md-3">
+            <h2>Who We Are:</h2>
+            <hr class="slash-1">
+            <p class="lead">We are a group of ice cream makers that vary from shop owning artisans to household hobbyists. Our goal is to share our creations in ever changing locals to keep the joy of ice cream fun and exciting as ever.</p>
+        </article>
+        <div class="col-md-6">
+            <img src="/images/about1.png" class="img-fluid img-thumbnail" alt="Responsive image">
+        </div>
+        <article class="blurb col-md-3">
+            <h2>Contact Info</h2>
+            <hr class="slash-1">
+            <ul class="lead p-0">
+                <li>Phone: (989)244-0981</li>
+                <li>Email: C&C@Cup&Cone.com</li>
+                <li>For Event Inquiries: events@Cup&Cone.com</li>
+            </ul>
+            <p class="lead">If you have an event space available, please reach out! We are always looking for a new place to Pop-Up</p>
+        </article>
+    </div>
+</section>
 
 <section class="mt-5">
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-md-6 order-1 order-md-2">
-                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about_square2.jpg">
+                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about2.png">
             </div>          
             <div class="col-md-6 order-2 order-md-1">
                 <div class="row justify-content-center">
@@ -24,7 +46,7 @@
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about_square3.jpg">
+                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about3.png">
             </div>
            <div class="col-md-6">
                 <div class="row justify-content-center">
@@ -44,7 +66,7 @@
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-md-6 order-1 order-md-2">
-                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about_square4.jpg">
+                <img class="img-fluid rounded-circle img-thumbnail" src="/images/about4.png">
             </div>          
             <div class="col-md-6 order-2 order-md-1">
                 <div class="row justify-content-center">
