--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<section id="footer" class="container-fluid sectionMargin">
+<section id="footer" class="container-fluid mt-5">
     <div class="row-12">
         <div class="row justify-content-center align-items-center">
             <p class="col-md-4 col-sm-3 mb-1 py-0 footer-item">Site Info
