/about page mobile optimized

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,12 @@ hr {
 /* ===============
 About Page CSS
 ================ */
+#about-align {
+  align-items: flex-start; }
+  @media (min-width: 992px) {
+    #about-align {
+      align-items: center; } }
+
 .about-image {
   border-radius: 50%; }
 
