--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,16 @@
 <%- include("partials/header") %>
-<section class="container-fluid sectionMargin">
-    <div class="row align-items-center">
-        <article class="blurb col-md-3">
-            <h2>Who We Are:</h2>
+<section class="container-fluid mt-3">
+    <div id="about-align" class="row">
+        <article class="blurb col-md-6 col-lg-3 pt-5 order-md-2 order-lg-1">
+            <h2>Who We Are</h2>
             <hr class="slash-1">
             <p class="lead">We are a group of ice cream makers that vary from shop owning artisans to household hobbyists. Our goal is to share our creations in ever changing locals to keep the joy of ice cream fun and exciting as ever.</p>
         </article>
-        <div class="col-md-6">
+        <div class="col-md-12 col-lg-6 pt-5 order-md-1 order-lg-2">
             <img src="/images/about1.png" class="img-fluid img-thumbnail" alt="Responsive image">
         </div>
-        <article class="blurb col-md-3">
-            <h2>Contact Info</h2>
+        <article class="blurb col-md-6 col-lg-3 pt-5 order-md-3 order-lg-3">
+            <h2>Contact Info - </h2>
             <hr class="slash-1">
             <ul class="lead p-0">
                 <li>Phone: (989)244-0981</li>
