--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,11 +139,14 @@ News Page CSS
 Admin Page CSS
 ================ */
 #postForm > label {
-  width: 100%; }
+  font-size: 1.2rem;
+  width: 90%;
+  text-align: left;
+  padding-top: 0.5rem; }
 #postForm > input {
-  width: 70%; }
+  width: 90%; }
 #postForm > textarea {
-  width: 100%;
+  width: 90%;
   height: 5rem; }
 
 /* ===============
