/events optomized for mobile. Project at 90% complete

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,15 +1,15 @@
 <%- include("partials/header") %>
-<section class="container-fluid sectionMargin">
-    <div class="row align-items-center">
-        <article class="blurb col-md-3">
+<section class="container-fluid pt-5">
+    <div class="row justify-content-center align-items-center pt-3">
+        <article class="blurb col-md-6 col-lg-3 order-md-2 order-lg-1">
             <h2>Reserve Entry Today!</h2>
             <hr class="slash-1">
             <p class="lead">Join us for our upcoming event inspired by ocean tales of wonder. Let us share our imaginations in the form of our favorite icey delights on a hot summer night in Huntington Beach.</p>
         </article>
-        <div class="col-md-6">
+        <div class="col-md-10 col-lg-6 order-md-1 order-lg-2 pb-3">
             <img src="/images/events1.svg" class="img-fluid img-thumbnail" alt="Responsive image">
         </div>
-        <article class="col-md-3">
+        <article class="col-md-6 col-lg-3 order-md-3">
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -44,30 +44,30 @@
     </div>
 </section>
 
-<section class="container-fluid sectionMargin">
-    <div class="row">
+<section class="container-fluid pt-5 my-5">
+    <div class="row justify-content-center">
         <article class="blurb col-12 text-center">
             <h2 display-2>Past Events -</h2>
             <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat?</p>
         </article>
     </div>
-    <div class="row my-0">
-        <article class="blurb col">
-                <img class="img-fluid img-thumbnail" src="/images/events2.svg" alt="Event Logo">
+    <div class="row justify-content-center pt-5 my-0">
+        <article class="blurb col-sm-12 col-md-10 col-lg-4 p-2">
+                <img class="img-fluid img-thumbnail mb-2" src="/images/events2.svg" alt="Event Logo">
                 <h2>Gelato On The Brink</h2>
                 <p class="lead">Join us on the sandy cliffs of Coral Park for some artisan gelato and a view that is ever eroding!</p>
                 <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
         </article>
 
-        <article class="blurb col">
-                <img class="img-fluid img-thumbnail" src="/images/events3.svg" alt="Event Logo">
+        <article class="blurb col-sm-12 col-md-10 col-lg-4 p-2">
+                <img class="img-fluid img-thumbnail mb-2" src="/images/events3.svg" alt="Event Logo">
                 <h2>The Melted Scoop</h2>
                 <p class="lead">Catch some rays and keep your beach bod with a guiltless scoop at Corona Del Mar!</p>
                 <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
         </article>
 
-        <article class="blurb col">
-                <img class="img-fluid img-thumbnail" src="/images/events4.svg" alt="Event Logo">
+        <article class="blurb col-sm-12 col-md-10 col-lg-4 pt-2">
+                <img class="img-fluid img-thumbnail mb-2" src="/images/events4.svg" alt="Event Logo">
                 <h2>The Bar Between</h2>
                 <p class="lead">We're invading Isla Vista's notorious pub crawl with tasty treats for the on the go imbibing!</p>
                 <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque saepe odio rem libero facere corrupti voluptas eaque adipisci sequi repellat? Repudiandae quos aliquam cumque voluptates, laborum ad tenetur in explicabo!</p>
