--- a/views/news.ejs
+++ b/views/news.ejs
@@ -1,60 +1,57 @@
 <%- include("partials/header") %>
-<html>
-  <body>
-    <div>
-        <section class="container-fluid mt-4">
-            <div class="row justify-content-center">
-                <article class="blurb aside col-md-6 col-lg-3 mt-5">
-                    <h2>Newsletter</h2>
-                    <hr class="slash-1" />
-                    <form>
-                        <div class="form-group">
-                            <label id="newsletter" for="email">Join out mailing list to keep up to date with our future events. Never know where we might pop up next!</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com">
-                        </div>
-                        <button id="submit" class="btn" type="submit">Submit</button>
-                    </form>
-                </article>
-                
-                <article class="blurb col-md-10 col-lg-6 px-0">
-                    <div class="post">
-                        <h2>Announcements!</h2>
-                        <hr class="slash-1">
-                        <p class="lead">A blog or news page is a great way to keep your customers up to date and engaged with your business.</p>
-                        <p class="lead"><a href="/news/admin">Create your own posts on the admin page!</a></p>
-                    </div>
-                    <% for (item of postsArr) { %>
-                    <div class="post">
-                        <% if(item.data.image != false){ %>
-                        <div class="pb-2">
-                            <img class="img-fluid img-thumbnail" src="<%=item.data.image%>" />
-                        </div>
-                        <% } %>
-                        <h2> <%= item.data.title %> </h2>
-                        <hr class="slash-1">
-                        <p class="lead"> <%= item.data.description %> </p>
-                        <p class="lead"> <%= item.content %> </p>
-                    </div>
-                    <% } %>
-                </article>
-                
-                <article class="blurb aside d-none d-lg-block col-md-2 col-lg-3 mt-5">
-                    <h2>Blurbs:</h2>
-                    <hr class="slash-1">
-                    <ul>
-                        <li><i class="fas fa-ice-cream"></i>
-                            <%= postsArr[2].data.description %>
-                        </li>
-                        <li><i class="fas fa-ice-cream"></i>
-                            <%= postsArr[1].data.description %>
-                        </li>
-                        <li><i class="fas fa-ice-cream"></i>
-                            <%= postsArr[3].data.description %>
-                        </li>
-                    </ul>
-                </article>
+<section class="container-fluid mt-4">
+    <div class="row justify-content-center">
+        <article class="blurb aside col-md-6 col-lg-3 mt-5">
+            <h2>Newsletter</h2>
+            <hr class="slash-1" />
+            <form>
+                <div class="form-group">
+                    <label id="newsletter" for="email">Join out mailing list to keep up to date with our future events.
+                        Never know where we might pop up next!</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <button id="submit" class="btn" type="submit">Submit</button>
+            </form>
+        </article>
+
+        <article class="blurb col-md-10 col-lg-6 px-0">
+            <div class="post">
+                <h2>Announcements!</h2>
+                <hr class="slash-1">
+                <p class="lead">A blog or news page is a great way to keep your customers up to date and engaged with
+                    your business.</p>
+                <p class="lead"><a href="/news/admin">Create your own posts on the admin page!</a></p>
             </div>
-        </section>
-  </body>
-</html>
+            <% for (item of postsArr) { %>
+            <div class="post">
+                <% if(item.data.image != false){ %>
+                <div class="pb-2">
+                    <img class="img-fluid img-thumbnail" src="<%=item.data.image%>" />
+                </div>
+                <% } %>
+                <h2> <%= item.data.title %> </h2>
+                <hr class="slash-1">
+                <p class="lead"> <%= item.data.description %> </p>
+                <p class="lead"> <%= item.content %> </p>
+            </div>
+            <% } %>
+        </article>
+
+        <article class="blurb aside d-none d-lg-block col-md-2 col-lg-3 mt-5">
+            <h2>Blurbs:</h2>
+            <hr class="slash-1">
+            <ul>
+                <li><i class="fas fa-ice-cream"></i>
+                    <%= postsArr[2].data.description %>
+                </li>
+                <li><i class="fas fa-ice-cream"></i>
+                    <%= postsArr[1].data.description %>
+                </li>
+                <li><i class="fas fa-ice-cream"></i>
+                    <%= postsArr[3].data.description %>
+                </li>
+            </ul>
+        </article>
+    </div>
+</section>
 <%- include("partials/footer") %>
